# AutonomousWheelchair

./: .gitignore  README.md
depth_node/src/depthcam/: depthcam_distance.py
scripts/python_scripts/: depthcam_distance.py
src/wheelchair_control/: CMakeLists.txt  package.xml
src/wheelchair_control/action/: MoveDistance.action
src/wheelchair_control/src/: agent.cpp  move_distance_client.cpp  move_distance_obstacle_avoidance_server.cpp  move_distance_server.cpp
src/wheelchair_description/: CMakeLists.txt  package.xml
src/wheelchair_description/launch/: gazebo.launch  spawn_wheelchair.launch  wheelchair.launch  wheelchair_spawn.launch
src/wheelchair_description/rviz/: rviz.config.rviz
src/wheelchair_description/urdf/: bruh.xacro  stereo_camera.xacro  wheelchair_body.xacro  wheelchair_body_stereo.xacro
src/wheelchair_description/worlds/: maze.world
src/wheelchair_navigation/: CMakeLists.txt  dependencies  package.xml
src/wheelchair_navigation/launch/: local_planner.launch  main.lauch
src/wheelchair_navigation/scripts/: visualiser.py
src/wheelchair_navigation/scripts/interface_scripts/: Interface.py  MapLoader.py  UserManual.odt  coordinates.csv
src/wheelchair_navigation/src/: Map.h  RRT.h  agent.cpp  main.cpp  move_distance_obstacle_avoidance_server.cpp  notes
src/wheelchair_navigation/src/sample_maps/: map.pgm  map.yaml  map2.pgm  map3.pgm  pixil.yaml  tree_nodes.csv
